# extrapcap

./: .env.example  .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
.github/scripts/: push-ops.sh  sync-ops.sh
.github/workflows/: candidate-review.yml  ci.yml  daily-report.yml  data-refresh.yml  deploy-pages.yml  feature-generation.yml  intraday-loop.yml  live-paper-cycle.yml  replay.yml  (+14 more)
configs/: default.json
docs/: README.md  architecture.md  charter.md  completion-audit.md  roadmap.md
examples/: sample_bars.csv  sample_contracts.json  sample_features.json  sample_option_observations.csv  sample_snapshot.json
models/: sniper.cbm
notebooks/: README.md
playback/: README.md
reports/: README.md  case-studies-2026-07-22.md  daily-2026-07-22.json  daily-2026-07-23.json  daily-2026-07-24.json  historical-options-access-2026-07-22.json  institutional-memo.md  provider-dry-run-2026-07-22.json  provider-real-model-dry-run-2026-07-22.json  real-bars-variant-comparison-2026-07-22.md  research-matrix-2026-07-22.md  sample-backtest.json
tests/: test_account_risk.py  test_basket_cycle.py  test_chain_engine.py  test_core.py  test_daily_note.py  test_diagnostics.py  test_events.py  test_improvement.py  test_intraday_state.py  test_ledger.py  test_live_cycle.py  test_matrix.py  test_monitor.py  test_operations.py  test_operations_cli.py  test_options_data.py  test_pagination.py  test_paper_run.py  test_post_trade.py  test_reporting_artifacts.py  test_reset.py  test_secrets.py  test_selection.py  test_threshold.py  test_universe.py
(+135 files in other folders)
