[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "extrapcap"
version = "0.1.0"
description = "Reproducible research and paper-trading system for Extrapolation Capital"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7", "pandas>=2.2", "numpy>=1.26", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
research = ["catboost>=1.2", "scikit-learn>=1.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
